--- a/index.html
+++ b/index.html
@@ -38,6 +38,24 @@
           -ms-overflow-style: none;
           scrollbar-width: none;
       }
+      /* Custom scrollbar styling */
+      .custom-scrollbar::-webkit-scrollbar {
+          width: 8px;
+      }
+      .custom-scrollbar::-webkit-scrollbar-track {
+          background: transparent;
+      }
+      .custom-scrollbar::-webkit-scrollbar-thumb {
+          background: #cbd5e1;
+          border-radius: 4px;
+      }
+      .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+          background: #94a3b8;
+      }
+      .custom-scrollbar {
+          scrollbar-width: thin;
+          scrollbar-color: #cbd5e1 transparent;
+      }
     </style>
   <script type="importmap">
 {
@@ -59,7 +77,7 @@
 <link rel="stylesheet" href="/index.css">
 </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="height: 100vh; width: 100%;"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
